# nahidArbX

./: .dockerignore  .gcloudignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  MLOptimisation.md  ML_REBUILD_PLAN.md  PUKU.md  README.md  ai-engine-initial.yml  ai-search-accuracy-report.md  ai-search-failure-analysis.md  backtesting.md  browser-state.json  cloudbuild.yaml  create_tables.ts  cv-project-nahidarbx.md  docker-compose.yml  drizzle.config.ts  dupcheck.mjs  ecosystem.config.js  engine.ts  eslint.config.mjs  fix_db.ts  fix_scores.ts  generate-db.js  in-play.md  instrumentation.ts  lint.txt  matcherlab.md  memory_leak.md  middleware.ts  next.config.ts  package-lock.json  package.json  place_test.ts  (+19 more)
.central-agent-config/: README.md  agent-instruction.md
.claude/: settings.json
.codex/: config.toml
.grok/: skills
.helm-diag/: diag_error_2026-04-26T17-29-07-145Z.json  diag_error_2026-04-26T17-29-17-176Z.json  diag_error_2026-04-26T17-29-27-223Z.json  diag_error_2026-04-26T17-29-37-263Z.json  diag_error_2026-04-26T17-29-47-314Z.json  diag_error_2026-04-26T17-29-57-355Z.json  diag_error_2026-04-26T17-30-07-404Z.json  diag_error_2026-04-26T17-30-17-453Z.json  diag_error_2026-04-26T17-30-27-506Z.json  diag_error_2026-04-26T17-30-37-556Z.json  diag_error_2026-04-26T17-30-47-610Z.json  diag_error_2026-04-26T17-30-57-645Z.json  diag_error_2026-04-26T17-31-07-694Z.json  diag_error_2026-04-26T17-31-17-745Z.json  diag_error_2026-04-26T17-31-27-790Z.json  diag_error_2026-04-26T17-31-37-831Z.json  diag_error_2026-04-26T17-31-47-890Z.json  diag_error_2026-04-26T17-31-57-943Z.json  diag_error_2026-04-26T17-32-07-993Z.json  diag_error_2026-04-26T17-32-18-044Z.json  diag_error_2026-04-26T17-32-28-093Z.json  diag_error_2026-04-26T17-32-38-131Z.json  diag_error_2026-04-26T17-32-48-181Z.json  diag_error_2026-04-26T17-32-58-232Z.json  diag_error_2026-04-26T17-33-08-284Z.json  diag_error_2026-04-26T17-33-18-331Z.json  diag_error_2026-04-26T17-33-28-374Z.json  diag_error_2026-04-26T17-33-38-426Z.json  diag_error_2026-04-26T17-33-48-475Z.json  diag_error_2026-04-26T17-33-58-525Z.json  diag_error_2026-04-26T17-34-08-572Z.json  diag_error_2026-04-26T17-34-18-634Z.json  diag_error_2026-04-26T17-34-28-684Z.json  diag_error_2026-04-26T17-34-38-733Z.json  diag_error_2026-04-26T17-34-48-790Z.json  diag_error_2026-04-26T17-34-58-847Z.json  diag_error_2026-04-26T17-35-08-900Z.json  diag_error_2026-04-26T17-35-18-954Z.json  diag_error_2026-04-26T17-35-29-013Z.json  diag_error_2026-04-26T17-35-39-066Z.json  (+162 more)
.puku/: puku-embeddings.db-shm  puku-embeddings.db-wal
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  robots.ts
docs/: BETCONSTRUCT_API.md  DEPLOYMENT.md  MLOptimisation.md  NINEWICKETS_EXCHANGE_API.md  NINEWICKETS_SPORTSBOOK_API.md  PINNACLE_API.md  SYSTEM-OVERVIEW.md  alphasearch.md  ml-optimizer-pipeline-plan.md  odds-investigation-2026-02-08.md  reactive-odds-engine-architecture.md
e2e/: about.spec.ts  admin.spec.ts  api-health.spec.ts  login.spec.ts  navigation.spec.ts
hooks/: use-ai-engine-config.ts  use-ai-providers.ts  use-betting-settings.ts
lib/: branding.ts  config.ts  engine-proxy.ts  log-retention.test.ts  log-retention.ts  store.ts  types.ts
memory/: feedback-cloud-only-ml.md
plans/: bets-history-date-presets.md  market_diagnostics_plan.md  ml-training-live-visibility.md  telegram-notifications-investigation.md
rawData/: near-matches.json
scripts/: NW_SB_DEBUG.ts  ai-search-supervisor.ts  analyze-optimizer-results.ts  apply-one-migration.ts  apply-pending-migrations.ts  apply-placed-bets-migration.ts  backfill-ml-scores.ts  benchmark-providers.sh  check-ai-activity.ts  check-value-persist.js  check-value-persist.ts  cleanup-optimizer.mjs  cloud-train.sh  debug-espn.ts  debug-football-data.ts  debug-fotmob.ts  debug-missing.ts  debug-pinn-totals.ts  debug-sofascore-stats.ts  debug-sofascore.ts  debug-totals-mapping.ts  debug-value-bet-counts.ts  debug-velki-catalog.ts  debug-velki-events.ts  debug-velki-mapping.ts  debug-velki-resolve.ts  debug-velki-totals.ts  dedupe-value-bets.ts  demo-bet-notify.ts  dev-all.mjs  diagnose-high-ev-bet.ts  diagnose-ml-pipeline.ts  diagnose-training.py  dump-9w-response.ts  dump-pinnacle-ws.ts  fix-ml-training-examples-ah-bug.ts  insert_dummy.ts  kill-dev.mjs  mark-stuck-run-failed.ts  mcp-postgres-cloud.ts  (+52 more)
services/ai-search/: README.md  pyproject.toml
services/ai-search/app/: __init__.py  config.py  grounding.py  main.py  models.py  quota_store.py
services/ai-search/app/llm/: fallback.py  groq_engine.py  hf_engine.py  prompts.py
services/ai-search/app/search/: __init__.py  router.py
services/ai-search/app/search/providers/: __init__.py  base.py  brave.py  duckduckgo.py  serper.py  tavily.py
services/ai-search/tests/: test_hf_fallback.py  test_search.py
services/entity-matcher/: Dockerfile  README.md  deploy.sh  pyproject.toml
services/entity-matcher/app/: conformal.py  db.py  main.py  models.py  scheduler.py
services/optimizer/: .dockerignore  .gcloudignore  Dockerfile  README.md  pyproject.toml  redeploy.sh
services/optimizer/app/: __init__.py  bootstrap.py  calibration.py  config.py  cpcv.py  db.py  deployment_gate.py  evaluator.py  exporter.py  feature_names.py  hpo.py  job.py  loader.py  main.py  pareto.py  policy.py  progress.py  runner.py  samplers.py  scoring.py  search_space.py  trainer.py  trainer.py.bak  vertex_registry.py  vertex_server.py  walk_forward.py  walkforward.py
services/optimizer/app/ml/: __init__.py  evaluator.py  features.py  model.py
services/optimizer/tests/: conftest.py  diagnose_corpus.py  smoke_real_data.py  test_calibration.py  test_deployment_gate.py  test_determinism.py  test_exporter.py  test_known_answer.py  test_lgbm_pipeline.py  test_ml_smoke.py  test_optimizer_sidecar.py  test_phase5_sidecar.py  test_placebo.py  test_smoke.py  test_vertex_registry.py
skills/: frontend-agency.md  web-researcher.md
(+967 files in other folders)
