[project]
name = "entity-matcher"
version = "0.1.0"
description = "Self-hosted ML matcher: BGE-M3 bi-encoder + bge-reranker-v2-m3 cross-encoder + MAPIE conformal calibration. Replaces the LightGBM entity-classifier service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sentence-transformers>=3.3",
  "transformers>=4.46",
  "torch>=2.4",
  "scikit-learn>=1.5",
  "mapie>=0.9",
  "numpy>=1.26",
  "pydantic>=2.9",
  "google-cloud-storage>=2.18",
  "cloud-sql-python-connector[pg8000]>=1.20.0",
  "pg8000>=1.31.2",
  "sqlalchemy>=2.0",
  "pgvector>=0.3",
  "joblib>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
