[project]
name = "alphasearch-optimizer"
version = "0.1.0"
description = "AlphaSearch — strategy parameter optimizer sidecar for nahidArbX"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "google-cloud-sql-connector[pg8000]>=1.13.0",
    "pg8000>=1.31.2",

    # Optimization
    "optuna>=4.1.0",

    # Time-series CV + financial validation
    "skfolio>=0.7.0",
    "pypbo>=0.4.4",

    # Statistical bootstrap (preserves time-series autocorrelation)
    "arch>=7.2.0",

    # Numerics
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.3",
    "polars>=1.15.0",
    "pyarrow>=18.0.0",

    # Utilities
    "ulid-py>=1.1.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
ml = [
    # Phase 4 — gradient boosting + calibration
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
