[project]
name = "nahidarbx-optimizer"
version = "0.2.0"
description = "Optimisation sidecar — one Cloud Run Job execution per sweep, for nahidArbX"
requires-python = ">=3.12"
dependencies = [
    # Config (no longer a web framework — runs as a Cloud Run Job).
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.36",
    "cloud-sql-python-connector[pg8000]>=1.20.0",
    "pg8000>=1.31.2",

    # Optimization
    "optuna>=4.1.0",

    # Numerics
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.3",
    "polars>=1.15.0",
    "pyarrow>=18.0.0",

    # ML — gradient boosting + calibration. Lazy-imported in app/ml/model.py
    # so the sidecar can boot even if these fail to install in some
    # environments. Required for runs with searchAlgorithm='ml-xgboost'.
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",

    # Utilities
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
