[project]
name = "nahidarbx-optimizer"
version = "0.3.0"
description = "ML training sidecar — LightGBM + ONNX pipeline, runs as Cloud Run Job"
requires-python = ">=3.12"
dependencies = [
    # Config.
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.36",
    "cloud-sql-python-connector[pg8000]>=1.20.0",
    "pg8000>=1.31.2",

    # ML — LightGBM binary classifier + ONNX export
    "lightgbm>=4.5.0",
    "onnx>=1.17.0",
    "onnxmltools>=1.12.0",
    "skl2onnx>=1.17.0",
    "scikit-learn>=1.5.0",
    "shap>=0.46.0",

    # Numerics
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.3",
    "polars>=1.15.0",
    "pyarrow>=18.0.0",

    # Cloud storage — ONNX model upload to GCS
    "google-cloud-storage>=2.18.0",

    # Utilities
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
